--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_rota_coleta">RotaColetaActivity</string>
+    <string name="finalizar">Finalizar Coleta</string>
 
 </resources>
